[JAVA-41884] Moving some article links on Github - core-java-string-conversions (#18133)